@@ -51,7 +51,7 @@ MPH_UNIX_SOURCE =				\
 
 if PLATFORM_WIN32
 MPH_SOURCE = $(MPH_C_SOURCE)
-MPH_LIBS   =
+MPH_LIBS   = $(GLIB_LIBS)
 else
 MPH_SOURCE = $(MPH_C_SOURCE) $(MPH_UNIX_SOURCE)
 MPH_LIBS   = $(GLIB_LIBS)
