@@ -1,3 +1,8 @@
+2009-09-09 Gonzalo Paniagua Javier <gonzalo@novell.com>
+
+	* zconf.h:
+	* Makefile.am: attempt to fix the windows GCC build.
+
 2009-09-02  Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* time.c (Mono_Posix_Syscall_nanosleep): Avoid referencing unitialized
